view frame animations, style tweaks

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,7 @@
  *
  *= require_self
  *= require bootstrap
+ *= require animations
  *= require global_site
  *= require home
  *= require vintage
