Updates to bindings on vintage pages, set up route and layout for admin page, set up angular route and template for new straps

--- a/app/assets/stylesheets/vintage.css
+++ b/app/assets/stylesheets/vintage.css
@@ -8,6 +8,7 @@
 }
 #vintage_listings_page ul.product-list li {
 	vertical-align: top;
+	width: 229px;
 }
 #vintage_listings_page ul.product-list li h3{
 	text-align: center;
