--- a/public/templates/global/mainNav.html
+++ b/public/templates/global/mainNav.html
@@ -9,10 +9,11 @@
 					<a href="#/vintage"><strong>Vintage Straps</strong></a>
 				</li>
 				<li class="dropdown">
-					<a class="dropdown-toggle" data-toggle="dropdown" href="#newstraps">
+					<a href="#/new"><strong>New Straps</strong></a>
+<!-- 					<a class="dropdown-toggle" data-toggle="dropdown" href="#newstraps">
 						<strong>New Straps <span class="caret"></span></strong>
 					</a>
-					<ul class="dropdown-menu">
+ 					<ul class="dropdown-menu">
 						<li>
 							<a href="#/newstraps/guitar"><strong>Guitar &amp; Banjo</strong></a>
 						</li>
@@ -25,7 +26,7 @@
 						<li>
 							<a href="#/newstraps/prices"><strong>Prices &amp; Ordering Info</strong></a>
 						</li>
-					</ul>
+					</ul> -->
 				</li>
 				<li>
 					<a href="#/merch"><strong>Merchandise</strong></a>
