--- a/public/templates/vintage/listings.html
+++ b/public/templates/vintage/listings.html
@@ -4,7 +4,7 @@
 			<div class="head_line">
 				<h4>
 					<strong>
-						Handcrafted from thoroughly cleaned and meticulously reconditioned select old/vintage leather.</br> 
+						Handcrafted from thoroughly cleaned and meticulously reconditioned select old/vintage leather.</br>
 						Each instrument strap is a unique creation and inherently different from every other one.
 					</strong>
 				</h4>
@@ -17,11 +17,11 @@
 						<a href="#/vintage/{{ strap.id }}">
 							<div class="thumbnail">
 								<div class="caption">
-									<h3>{{ strap.name }} </h3>
+									<h3 ng-bind="strap.name"></h3>
 								</div>
 								<img src="../img/{{ strap.img_url }}.jpg" alt="...">
 								<div class="caption">
-									<h3>{{ getStatus(strap.status) }}</h3>
+									<h3 ng-bind="getStatus(strap.status)"></h3>
 								</div>
 							</div>
 							</a>
