hooking up basic inventory api functionality with angular resource

--- a/public/templates/admin/inventory.html
+++ b/public/templates/admin/inventory.html
@@ -1,1 +1,1 @@
-<div id="inventory_page" class="row body">	<div class="container content_section">    	</div></div>
+<div id="inventory_page" class="row body">	<div class="container content_section">    <ul>			<li ng-repeat="item in inventory" ng-bind="item.name"></li>		</ul>	</div></div>
